--- a/aulas videos/index.css
+++ b/aulas videos/index.css
@@ -14,3 +14,44 @@ body {
   background-position: center center;
 }
  
+
+a {
+  color: #ea02ff;
+  text-decoration: none;
+  
+  }
+  
+  nav a:hover {
+    color: #00ffaa;
+  }
+
+
+  ul {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  align-items: center;
+  padding: 16px;
+  
+  padding: 10px 20px;
+  background-color: #000000;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 1;
+    
+  }
+
+  
+  h1 {
+    color: #00ffaa;
+
+
+  }
+
+
+  video {
+
+    
+  }
